[tool.poetry]
name = "pycounts"
version = "0.1.0"
description = "Count the number of words in a text file"
authors = ["Jenit Jain"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
matplotlib = ">=3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
